# grpc-object-detector

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
.circleci/: config.yml
.circleci/images/: ci.Dockerfile
examples/python-client/: async_client.py  client.py  image_detection_pb2.py  image_detection_pb2_grpc.py
include/VideoAnalyzer/: DetectorInterface.h  FaceEyesDetector.h
protos/: CMakeLists.txt  image_detection.proto
src/: FaceEyesDetector.cpp  main.cc  main.cpp
src/VideoAnalyzer/: DetectorInterface.h  FaceEyesDetector.cc  FaceEyesDetector.cpp  FaceEyesDetector.h  ImageDetectionService.cc  ImageDetectionService.cpp  ImageDetectionService.h  OnnxYoloDetector.cc  OnnxYoloDetector.h  OnnxYoloV4Detector.cc  OnnxYoloV4Detector.h  onnx_yolo_detector_utils.cc  onnx_yolov4_detector_utils.cc
src/grpc_obj_det/: DetectorFactory.h  DetectorInterface.h  FaceEyesDetector.cc  FaceEyesDetector.h  ImageDetectionService.cc  ImageDetectionService.h  OnnxYoloV4Detector.cc  OnnxYoloV4Detector.h  RandomPokemonDetector.h  onnx_yolov4_detector_utils.cc
tests/: test_detector_interface.cc  test_detector_interface.cpp  test_img_det_service.cc  test_img_det_service.cpp  test_onnx_yolov4_detector.cc
tests/data/: invalid_coco_labels.txt  invalid_yolov4_coco_anchors_1.txt  invalid_yolov4_coco_anchors_2.txt
tools/: build.sh  ci.Dockerfile  install_grpc.sh  install_onnxruntime.sh
